* Removed sum and count since they can not be in the WHERE statement, but must be in the HAVING statement
* Added in auto joins for groups so that the joins don't have to be manually specified.
* Use first column in column_names as the default column for calculations, since a column is required when using DISTINCT and some tables can have more than one primary key.

== 1.6.2 released 2008-12-13

* Remove duplicate joins at a lower level for a cleaner and less brittle approach.

== 1.6.1 released 2008-12-8

* Group multi faceted conditions since we allow for the mix of "and" and "or"
* Blank arrays are not meaningful values for conditions
* Add in a unique identifier for the auto-generated hidden fields so that multiple forms do no present a problem.

== 1.6.0 released 2008-12-8

* Converted all tree conditions to nested set conditions for performance reasons. A nested set data structure is now required instead of a tree
* Added DISTINCT to select if you are not provided a select, searching, and have joins.
* Included :not_like in the list of conditions to be required upon initialization.

== 1.5.10 released 2008-12-8

* Create class level conditions upon instantiation to avoid conflicts.

== 1.5.9 released 2008-12-3

* Added metaclass object extension for older version of ActiveSupport.
* Added average, count, and sum modifiers.

== 1.5.8 released 2008-12-3

* Removed array support for groups, arrays will set conditions, not create multiple groups. If you need to create multiple groups you will have to pass an array with multiple {:group => my_groups} hashes.
* Fixed issues with using name spaced models.
* Added support for multiparameter conditions to support date_select helpers.

== 1.5.7 released 2008-11-30

* Fixed how grouping works, you can now specify "and_group" and "or_group", just like you can with conditions.
* Specifying a join type will take priority. So "and_name_like" will ALWAYS join with AND, even is any = true for the search.
