@@ -6,6 +6,7 @@
 * Removed sum and count since they can not be in the WHERE statement, but must be in the HAVING statement
 * Added in auto joins for groups so that the joins don't have to be manually specified.
 * Use first column in column_names as the default column for calculations, since a column is required when using DISTINCT and some tables can have more than one primary key.
+* On associations see what the first conditions "any" status is to determine if to join with "ANY" or "AND"
 
 == 1.6.2 released 2008-12-13
 
